--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <!-- Menu -->
             <div class="navbar-collapse collapse justify-content-end text-uppercase fw-bolder" id="nav">
                 <ul class="navbar-nav">
-                    <li class="navbar-item"><a href="#page-top" class="nav-link m-2 menuitemcs">Home</a></li>
+                    <li class="navbar-item"><a href="index.html" class="nav-link m-2 menuitemcs">Home</a></li>
                     <li class="navbar-item"><a href="#Skills" class="nav-link m-2 menuitemcs">Skills</a></li>
                     <li class="navbar-item"><a href="#Projects" class="nav-link m-2 menuitemcs">Projects</a></li>
                     <li class="navbar-item"><a href="#CV" class="nav-link m-2 menuitemcs">CV</a></li>
