project section update

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- custom css -->
     <link href="./css/style.css" rel="stylesheet" type="text/css" />
     <link href="./css/skillstyle.css" rel="stylesheet" type="text/css" />
+    <link href="./css/project.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -76,7 +77,7 @@
                         <button class="btncontactcs noselect">Contact Me</button>
                     </div>
                 </div>
-            </div>            
+            </div>
         </div>
 
         <!-- End Banner -->
@@ -91,7 +92,7 @@
                     <div class="mb-4 underlinecs"></div>
                 </div>
                 <div class="col-12">
-                    <h3 class="fw-bold skilltitlecs">Linguistic Skills</h3>
+                    <h3 class="fw-bold skilltitlecs">●●Linguistic Skills●●</h3>
                     <div class="mb-4 titlelinecs"></div>
                 </div>
                 <div class="col-4">
@@ -115,7 +116,7 @@
             </div>
             <div class="row topbuffercs">
                 <div class="col-12">
-                    <h3 class="fw-bold skilltitlecs">Programming Skills</h3>
+                    <h3 class="fw-bold skilltitlecs">●●Programming Skills●●</h3>
                     <div class="mb-4 titlelinecs"></div>
                 </div>
                 <div class="col-3">
@@ -177,10 +178,65 @@
     <!-- Start Project Section -->
     <section class="" id="Projects">
         <div class="container-fluid">
-            <div class="row">                
-
+            <div class="row text-center">
+                <div class="col-12 text-center">
+                    <h1 class="display-4 mb-4 skillheadercs">Projects</h1>
+                    <div class="mb-4 underlinecs"></div>
+                </div>
+                <div class="col-4">
+                    <figure class="container">
+                        <img class="projimgcs" src="./assets/img/Capture.JPG" alt="" />
+                        <figcaption>
+                            <h3>View</h3>
+                        </figcaption>
+                        <a href="#"></a>
+                    </figure>
+                    <!-- <p class="title">Password Strength</p>
+                    <div class="overlay"></div>
+                    <img class="projimgcs" src="./assets/img/Capture.JPG" alt="" /> -->
+                </div>
+                <div class="col-4">
+                    <figure class="container">
+                        <img class="projimgcs" src="./assets/img/Capture2.JPG" alt="" />
+                        <figcaption>
+                            <h3>View</h3>
+                        </figcaption>
+                        <a href="#"></a>
+                    </figure>
+                    <!-- <p class="title">To do List</p>
+                    <img class="projimgcs" src="./assets/img/Capture2.JPG" alt="" />-->
+                </div> 
+                    <div class="col-4">
+                        <figure class="container">
+                            <img class="projimgcs" src="./assets/img/Capture3.JPG" alt="" />
+                            <figcaption>
+                                <h3>View</h3>
+                            </figcaption>
+                            <a href="#"></a>
+                        </figure>
+                    </div>
+                </div>
+                <div class="row text-center topbuffercs">
+                    <div class="col-6">
+                        <figure class="container">
+                            <img class="projimgcs" src="./assets/img/Capture4.JPG" alt="" />
+                            <figcaption>
+                                <h3>View</h3>
+                            </figcaption>
+                            <a href="#"></a>
+                        </figure>
+                    </div>
+                    <div class="col-6">
+                        <figure class="container">
+                            <img class="projimgcs" src="./assets/img/Capture5.JPG" alt="" />
+                            <figcaption>
+                                <h3>View</h3>
+                            </figcaption>
+                            <a href="#"></a>
+                        </figure>
+                    </div>
+                </div>
             </div>
-        </div>
     </section>
     <!-- End Project Section -->
 
