--- a/index.html
+++ b/index.html
@@ -240,6 +240,44 @@
     </section>
     <!-- End Project Section -->
 
+    <!-- Start CV Section -->
+    <section class="" id="CV">
+        <div class="conatiner-fluid cvcustomcs">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h1 class="display-4 mb-4 skillheadercs">CV & Background</h1>
+                    <div class="mb-4 underlinecs"></div>
+                </div>
+                <div class="col-4 text-center">
+                    <img class="cvimgcs" src="./assets/img/WDF4041.jpg" alt=""/>
+                </div>
+                <div class="col-2 text-left text-light d-none d-lg-block cvtextcs">
+                    <span>Name</span><br/>
+                    <span>Age</span><br/>
+                    <span>Position</span><br/>
+                    <span>Experience</span>
+                </div>
+                <div class="col-1 text-left text-light d-none d-lg-block cvtextcs">
+                    <span>-</span><br/>
+                    <span>-</span><br/>
+                    <span>-</span><br/>
+                    <span>-</span>                    
+                </div>
+                <div class="col-2 text-left text-light d-none d-lg-block cvtextcs">
+                    <span>Mya Thet Paing Aung</span><br/>
+                    <span>08 April 1994</span><br/>
+                    <span>Software Engineer</span><br/>
+                    <span>7 years</span>
+                </div>
+                <div class="col-1 mt-auto text-center">
+                    <a href="https://docs.google.com/document/d/182gDar23rUmr_rblexUhP1FJGVcoMTdzgUXwthoLz2o/edit?usp=sharing" class="nounderline">
+                        <button class="cvbuttoncs">View full CV</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End CV Section -->
 
     <!-- boostrap css1 js2 -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
