--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link href="./css/style.css" rel="stylesheet" type="text/css" />
     <link href="./css/skillstyle.css" rel="stylesheet" type="text/css" />
     <link href="./css/project.css" rel="stylesheet" type="text/css" />
+    <link href="./css/contact.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -57,7 +58,7 @@
 
         <!-- Start Banner -->
         <div class="bannercs">
-            <div class="container-fluid">
+            <div class="mb-2 container-fluid">
                 <div class="row">
                     <div class="col-6">
                         <!-- when it reach to mobile size, image disappear -->
@@ -85,7 +86,7 @@
     <!-- End Header -->
     <!-- Start Skills Section -->
     <section class="skillcs" id="Skills">
-        <div class="container-fluid">
+        <div class="mb-2 container-fluid">
             <div class="row">
                 <div class="col-12 text-center">
                     <h1 class="display-4 mb-4 skillheadercs">My Skills</h1>
@@ -177,7 +178,7 @@
 
     <!-- Start Project Section -->
     <section class="" id="Projects">
-        <div class="container-fluid">
+        <div class="mb-2 container-fluid">
             <div class="row text-center">
                 <div class="col-12 text-center">
                     <h1 class="display-4 mb-4 skillheadercs">Projects</h1>
@@ -205,72 +206,73 @@
                     </figure>
                     <!-- <p class="title">To do List</p>
                     <img class="projimgcs" src="./assets/img/Capture2.JPG" alt="" />-->
-                </div> 
-                    <div class="col-4">
-                        <figure class="container">
-                            <img class="projimgcs" src="./assets/img/Capture3.JPG" alt="" />
-                            <figcaption>
-                                <h3>View</h3>
-                            </figcaption>
-                            <a href="#"></a>
-                        </figure>
-                    </div>
                 </div>
-                <div class="row text-center topbuffercs">
-                    <div class="col-6">
-                        <figure class="container">
-                            <img class="projimgcs" src="./assets/img/Capture4.JPG" alt="" />
-                            <figcaption>
-                                <h3>View</h3>
-                            </figcaption>
-                            <a href="#"></a>
-                        </figure>
-                    </div>
-                    <div class="col-6">
-                        <figure class="container">
-                            <img class="projimgcs" src="./assets/img/Capture5.JPG" alt="" />
-                            <figcaption>
-                                <h3>View</h3>
-                            </figcaption>
-                            <a href="#"></a>
-                        </figure>
-                    </div>
+                <div class="col-4">
+                    <figure class="container">
+                        <img class="projimgcs" src="./assets/img/Capture3.JPG" alt="" />
+                        <figcaption>
+                            <h3>View</h3>
+                        </figcaption>
+                        <a href="#"></a>
+                    </figure>
                 </div>
             </div>
+            <div class="row text-center topbuffercs">
+                <div class="col-6">
+                    <figure class="container">
+                        <img class="projimgcs" src="./assets/img/Capture4.JPG" alt="" />
+                        <figcaption>
+                            <h3>View</h3>
+                        </figcaption>
+                        <a href="#"></a>
+                    </figure>
+                </div>
+                <div class="col-6">
+                    <figure class="container">
+                        <img class="projimgcs" src="./assets/img/Capture5.JPG" alt="" />
+                        <figcaption>
+                            <h3>View</h3>
+                        </figcaption>
+                        <a href="#"></a>
+                    </figure>
+                </div>
+            </div>
+        </div>
     </section>
     <!-- End Project Section -->
 
     <!-- Start CV Section -->
     <section class="" id="CV">
-        <div class="conatiner-fluid cvcustomcs">
+        <div class="mb-2 conatiner-fluid cvcustomcs">
             <div class="row">
                 <div class="col-12 text-center">
                     <h1 class="display-4 mb-4 skillheadercs">CV & Background</h1>
                     <div class="mb-4 underlinecs"></div>
                 </div>
-                <div class="col-4 text-center">
-                    <img class="cvimgcs" src="./assets/img/WDF4041.jpg" alt=""/>
+                <div class="col-3 text-center">
+                    <img class="cvimgcs" src="./assets/img/WDF4041.jpg" alt="" />
                 </div>
                 <div class="col-2 text-left text-light d-none d-lg-block cvtextcs">
-                    <span>Name</span><br/>
-                    <span>Age</span><br/>
-                    <span>Position</span><br/>
+                    <span>Name</span><br />
+                    <span>Age</span><br />
+                    <span>Position</span><br />
                     <span>Experience</span>
                 </div>
                 <div class="col-1 text-left text-light d-none d-lg-block cvtextcs">
-                    <span>-</span><br/>
-                    <span>-</span><br/>
-                    <span>-</span><br/>
-                    <span>-</span>                    
+                    <span>-</span><br />
+                    <span>-</span><br />
+                    <span>-</span><br />
+                    <span>-</span>
                 </div>
-                <div class="col-2 text-left text-light d-none d-lg-block cvtextcs">
-                    <span>Mya Thet Paing Aung</span><br/>
-                    <span>08 April 1994</span><br/>
-                    <span>Software Engineer</span><br/>
+                <div class="col-4 text-left text-light d-none d-lg-block cvtextcs">
+                    <span>Mya Thet Paing Aung</span><br />
+                    <span>08 April 1994</span><br />
+                    <span>Software Engineer</span><br />
                     <span>7 years</span>
                 </div>
                 <div class="col-1 mt-auto text-center">
-                    <a href="https://docs.google.com/document/d/182gDar23rUmr_rblexUhP1FJGVcoMTdzgUXwthoLz2o/edit?usp=sharing" class="nounderline">
+                    <a href="https://docs.google.com/document/d/182gDar23rUmr_rblexUhP1FJGVcoMTdzgUXwthoLz2o/edit?usp=sharing"
+                        class="nounderline">
                         <button class="cvbuttoncs">View full CV</button>
                     </a>
                 </div>
@@ -278,6 +280,67 @@
         </div>
     </section>
     <!-- End CV Section -->
+
+    <!-- Start Contact Section -->
+    <section id="Contact">
+        <!-- <div class="container-fluid">
+            <div class="row">
+                <h1>contact me</h1>
+            </div>
+              <div class="row input-container">
+                <div class="col-xs-12">
+                    <div class="styled-input wide">
+                        <input type="text" required />
+                        <label>Name</label>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <div class="styled-input">
+                        <input type="text" required />
+                        <label>Email</label>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <div class="styled-input" style="float:right;">
+                        <input type="text" required />
+                        <label>Phone Number</label>
+                    </div>
+                </div>
+                <div class="col-xs-12">
+                    <div class="styled-input wide">
+                        <textarea required></textarea>
+                        <label>Message</label>
+                    </div>
+                </div>
+                <div class="col-xs-12">
+                    <div class="btn-lrg submit-btn">Send Message</div>
+                </div>
+            </div>
+        </div> -->
+        <div class="mb-2 container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <div class="col-12 text-center">
+                        <h1 class="display-4 mb-4 skillheadercs">Contact</h1>
+                        <div class="mb-4 underlinecs"></div>
+                    </div>
+                </div>
+                <div class="col-3 text-center">
+                    <a href=""><i class="fab fa-facebook fa-5x socialiconcs"></i></a>
+                </div>
+                <div class="col-3 text-center">
+                    <a href=""><i class="fab fa-instagram-square fa-5x socialiconcs"></i></a>
+                </div>
+                <div class="col-3 text-center">
+                    <a href=""><i class="fab fa-twitter-square fa-5x socialiconcs"></i></a>
+                </div>
+                <div class="col-3 text-center">
+                    <a href=""><i class="fab fa-linkedin fa-5x socialiconcs"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Contact Section -->
 
     <!-- boostrap css1 js2 -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
