--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link href="./css/skillstyle.css" rel="stylesheet" type="text/css" />
     <link href="./css/project.css" rel="stylesheet" type="text/css" />
     <link href="./css/contact.css" rel="stylesheet" type="text/css" />
+    <link href="./css/cv.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -58,7 +59,7 @@
 
         <!-- Start Banner -->
         <div class="bannercs">
-            <div class="mb-2 container-fluid">
+            <div class=" container-fluid">
                 <div class="row">
                     <div class="col-6">
                         <!-- when it reach to mobile size, image disappear -->
@@ -85,89 +86,104 @@
     </header>
     <!-- End Header -->
     <!-- Start Skills Section -->
-    <section class="skillcs" id="Skills">
-        <div class="mb-2 container-fluid">
+    <section class="mt-2 skillcs" id="Skills">
+        <div class="container-fluid">
+            <!-- Start Language skill -->
             <div class="row">
                 <div class="col-12 text-center">
                     <h1 class="display-4 mb-4 skillheadercs">My Skills</h1>
                     <div class="mb-4 underlinecs"></div>
                 </div>
-                <div class="col-12">
-                    <h3 class="fw-bold skilltitlecs">●●Linguistic Skills●●</h3>
+                <div class="col-12 mx-1">
+                    <h3 class="fw-bold skilltitlecs">●●Language Skills●●</h3>
                     <div class="mb-4 titlelinecs"></div>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-3 col-md-12 mx-1">
                     <p class="text-light fw-bold">Burmese</p>
                     <div class="progress">
                         <div class="color color-burmese"></div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-3 col-sm-12">
                     <p class="text-light fw-bold">English</p>
                     <div class="progress">
                         <div class="color color-english"></div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-3 col-md-12">
                     <p class="text-light fw-bold">Japanese</p>
                     <div class="progress">
                         <div class="color color-japanese"></div>
                     </div>
                 </div>
             </div>
+            <!-- End Language Skill -->
+
+            <!-- Start Programming Skill -->
+            <!-- C# Delphi C++ -->
             <div class="row topbuffercs">
-                <div class="col-12">
+                <div class="col-12 col-sm-12 mx-1">
                     <h3 class="fw-bold skilltitlecs">●●Programming Skills●●</h3>
                     <div class="mb-4 titlelinecs"></div>
                 </div>
-                <div class="col-3">
+                <div class="col-lg-3 col-sm-12 mx-1">
                     <p class="text-light fw-bold">C#</p>
                     <div class="progress">
                         <div class="color color-csharp"></div>
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-lg-3 col-sm-12">
                     <p class="text-light fw-bold">Delphi</p>
                     <div class="progress">
                         <div class="color color-delphi"></div>
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-lg-3 col-sm-12">
                     <p class="text-light fw-bold">C++</p>
                     <div class="progress">
                         <div class="color color-cdplus"></div>
                     </div>
                 </div>
-                <div class="col-3">
+            </div>
+            <!-- HTML CSS BootStrap -->
+            <div class="row topbuffercs">
+                <div class="col-lg-3 col-sm-12 mx-1">
                     <p class="text-light fw-bold">HTML</p>
                     <div class="progress">
                         <div class="color color-html"></div>
                     </div>
                 </div>
-            </div>
-            <div class="row topbuffercs">
-                <div class="col-3">
+                <div class="col-lg-3 col-sm-12">
                     <p class="text-light fw-bold">CSS</p>
-                    <div class="progress">
+                    <div class="mb-4 progress">
                         <div class="color color-css"></div>
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-lg-3 col-sm-12">
                     <p class="text-light fw-bold">BootStrap</p>
-                    <div class="progress">
+                    <div class="mb-4 progress">
                         <div class="color color-bootstrap"></div>
                     </div>
                 </div>
-                <div class="col-3">
+            </div>
+            <!-- HTML CSS BootStrap -->
+            <div class="row topbuffercs">
+                <div class="col-lg-3 col-sm-12 mx-1">
                     <p class="text-light fw-bold">JavaScript</p>
-                    <div class="progress">
+                    <div class="mb-4 progress">
                         <div class="color color-js"></div>
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-lg-3 col-sm-12">
                     <p class="text-light fw-bold">PHP</p>
-                    <div class="progress">
+                    <div class="mb-4 progress">
                         <div class="color color-php"></div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-12">
+                    <p class="text-light fw-bold">MYSQL</p>
+                    <div class="mb-4 progress">
+                        <div class="color color-mysql"></div>
                     </div>
                 </div>
             </div>
@@ -177,14 +193,14 @@
     <!-- End Skills Section -->
 
     <!-- Start Project Section -->
-    <section class="" id="Projects">
-        <div class="mb-2 container-fluid">
+    <section class="mt-2" id="Projects">
+        <div class="container-fluid">
             <div class="row text-center">
                 <div class="col-12 text-center">
-                    <h1 class="display-4 mb-4 skillheadercs">Projects</h1>
+                    <h1 class="display-4 mb-4 projectheadercs">Projects</h1>
                     <div class="mb-4 underlinecs"></div>
                 </div>
-                <div class="col-4">
+                <div class="col-md-4 col-sm-12">
                     <figure class="container">
                         <img class="projimgcs" src="./assets/img/Capture.JPG" alt="" />
                         <figcaption>
@@ -196,7 +212,7 @@
                     <div class="overlay"></div>
                     <img class="projimgcs" src="./assets/img/Capture.JPG" alt="" /> -->
                 </div>
-                <div class="col-4">
+                <div class="col-md-4 col-sm-12">
                     <figure class="container">
                         <img class="projimgcs" src="./assets/img/Capture2.JPG" alt="" />
                         <figcaption>
@@ -207,7 +223,7 @@
                     <!-- <p class="title">To do List</p>
                     <img class="projimgcs" src="./assets/img/Capture2.JPG" alt="" />-->
                 </div>
-                <div class="col-4">
+                <div class="col-md-4 col-sm-12">
                     <figure class="container">
                         <img class="projimgcs" src="./assets/img/Capture3.JPG" alt="" />
                         <figcaption>
@@ -218,7 +234,7 @@
                 </div>
             </div>
             <div class="row text-center topbuffercs">
-                <div class="col-6">
+                <div class="col-md-6 col-sm-12">
                     <figure class="container">
                         <img class="projimgcs" src="./assets/img/Capture4.JPG" alt="" />
                         <figcaption>
@@ -227,7 +243,7 @@
                         <a href="#"></a>
                     </figure>
                 </div>
-                <div class="col-6">
+                <div class="col-md-6 col-sm-12">
                     <figure class="container">
                         <img class="projimgcs" src="./assets/img/Capture5.JPG" alt="" />
                         <figcaption>
@@ -242,15 +258,15 @@
     <!-- End Project Section -->
 
     <!-- Start CV Section -->
-    <section class="" id="CV">
-        <div class="mb-2 conatiner-fluid cvcustomcs">
+    <section class="mt-2" id="CV">
+        <div class="conatiner-fluid cvcustomcs">
             <div class="row">
                 <div class="col-12 text-center">
                     <h1 class="display-4 mb-4 skillheadercs">CV & Background</h1>
                     <div class="mb-4 underlinecs"></div>
                 </div>
-                <div class="col-3 text-center">
-                    <img class="cvimgcs" src="./assets/img/WDF4041.jpg" alt="" />
+                <div class="col-md-3 col-sm-6 text-center">
+                    <img class="mb-4 cvimgcs" src="./assets/img/WDF4041.jpg" alt="" />
                 </div>
                 <div class="col-2 text-left text-light d-none d-lg-block cvtextcs">
                     <span>Name</span><br />
@@ -270,11 +286,9 @@
                     <span>Software Engineer</span><br />
                     <span>7 years</span>
                 </div>
-                <div class="col-1 mt-auto text-center">
+                <div class="col-md-1 col-sm-6 mt-auto mb-5 text-center">
                     <a href="https://docs.google.com/document/d/182gDar23rUmr_rblexUhP1FJGVcoMTdzgUXwthoLz2o/edit?usp=sharing"
-                        class="nounderline">
-                        <button class="cvbuttoncs">View full CV</button>
-                    </a>
+                        class="btn btn-white btn-animate">View CV</a>
                 </div>
             </div>
         </div>
@@ -282,12 +296,15 @@
     <!-- End CV Section -->
 
     <!-- Start Contact Section -->
-    <section id="Contact">
-        <!-- <div class="container-fluid">
-            <div class="row">
-                <h1>contact me</h1>
+    <section class="mt-2" id="Contact">
+        <div class="container-fluid">
+            <div class="col-12">
+                <div class="col-12 text-center">
+                    <h1 class="display-4 mb-4 cvheadercs">Contact</h1>
+                    <div class="mb-4 underlinecs"></div>
+                </div>
             </div>
-              <div class="row input-container">
+            <div class="row input-container">
                 <div class="col-xs-12">
                     <div class="styled-input wide">
                         <input type="text" required />
@@ -312,43 +329,22 @@
                         <label>Message</label>
                     </div>
                 </div>
-                <div class="col-xs-12">
+                <div class="col-xs-12 text-center">
                     <div class="btn-lrg submit-btn">Send Message</div>
                 </div>
             </div>
-        </div> -->
-        <div class="mb-2 container-fluid">
             <div class="row">
-                <div class="col-12">
-                    <div class="col-12 text-center">
-                        <h1 class="display-4 mb-4 skillheadercs">Contact</h1>
-                        <div class="mb-4 underlinecs"></div>
-                    </div>
-                </div>
-                <div class="col-3 text-center">
-                    <a href=""><i class="fab fa-facebook fa-5x socialiconcs"></i></a>
-                </div>
-                <div class="col-3 text-center">
-                    <a href=""><i class="fab fa-instagram-square fa-5x socialiconcs"></i></a>
-                </div>
-                <div class="col-3 text-center">
-                    <a href=""><i class="fab fa-twitter-square fa-5x socialiconcs"></i></a>
-                </div>
-                <div class="col-3 text-center">
-                    <a href=""><i class="fab fa-linkedin fa-5x socialiconcs"></i></a>
+                <div class="col-12 text-center">
+                    <a href="" class="px-3 mb-4"><i class="fab fa-facebook fa-3x socialiconcs"></i></a>
+                    <a href="" class="px-3 mb-4"><i class="fab fa-instagram-square fa-3x socialiconcs"></i></a>
+                    <a href="" class="px-3 mb-4"><i class="fab fa-twitter-square fa-3x socialiconcs"></i></a>
+                    <a href="" class="px-3 mb-4"><i class="fab fa-linkedin fa-3x socialiconcs"></i></a>
+                    <a href="" class="px-3 mb-4"><i class="fab fa-line fa-3x socialiconcs"></i></a>
                 </div>
             </div>
         </div>
     </section>
     <!-- End Contact Section -->
-
-    <!-- boostrap css1 js2 -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"></script>
 
     <!-- custom javascript -->
     <script src="./js/app.js"></script>
