add github link

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                         <figcaption>
                             <h3>View</h3>
                         </figcaption>
-                        <a href="#"></a>
+                        <a href="https://mtpa94.github.io/ExchangeRate/"></a>
                     </figure>
                 </div>
             </div>
@@ -240,7 +240,7 @@
                         <figcaption>
                             <h3>View</h3>
                         </figcaption>
-                        <a href="#"></a>
+                        <a href="https://mtpa94.github.io/tha-project-mta/"></a>
                     </figure>
                 </div>
                 <div class="col-md-6 col-sm-12">
